--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1662,6 +1662,17 @@
   file = {/Users/nidhivinod/Zotero/storage/C9QIB5S9/Cavender-Bares and Bazzaz - 2000 - Changes in drought response strategies with ontoge.pdf}
 }
 
+@article{cdi_fao_agris_US201302680873,
+  title = {Turbulent Transfer in Plant Canopies},
+  author = {Raupach, M.R},
+  journaltitle = {Seminar series - Society for Experimental Biology},
+  volume = {31},
+  pages = {41--61},
+  issn = {0309-6831},
+  langid = {english},
+  keywords = {atmosphere,canopy,interactions,mathematical models,meteorological parameters,plant communities,turbulence}
+}
+
 @online{ChapterTimeSeries,
   title = {Chapter 2 {{Time}} Series Graphics | {{Forecasting}}: {{Principles}}~and~{{Practice}}},
   url = {https://otexts.com/fpp2/graphics.html},
@@ -3122,6 +3133,32 @@
   date = {2009},
   abstract = {structure above a vegetation canopy},
   file = {/Users/nidhivinod/Zotero/storage/FBX64J2N/Finnigan et al. - 2009 - Turbulence.pdf}
+}
+
+@article{finniganTurbulencePlantCanopies,
+  title = {Turbulence in Plant Canopies},
+  author = {Finnigan, John},
+  journaltitle = {Ann. Rev. Fluid Mech},
+  pages = {519--571},
+  abstract = {Abstract The single-point statistics of turbulence in the ‘roughness sub-layer’ occupied by the plant canopy and the air layer just above it differ significantly from those in the surface layer. The mean velocity profile is inflected, second moments are strongly inhomogeneous with height, skewnesses are large, and second-moment budg-ets are far from local equilibrium. Velocity moments scale with single length and time scales throughout the layer rather than depending on height. Large coherent structures control turbulence dynamics. Sweeps rather than ejections dominate eddy fluxes and a typical large eddy consists of a pair of counter-rotating streamwise vortices, the downdraft between the vortex pair generating the sweep. Comparison with the statis-tics and instability modes of the plane mixing layer shows that the latter rather than the boundary layer is the appropriate model for canopy flow and that the dominant large eddies are the result of an inviscid instability of the inflected mean velocity profile. Aerodynamic drag on the foliage is the cause both of the unstable inflected velocity profile and of a ‘spectral short cut ’ mechanism that removes energy from large eddies and diverts it to fine scales, where it is rapidly dissipated, bypassing the inertial eddy-cascade. Total dissipation rates are very large in the canopy as a result of the fine-scale shear layers that develop around the foliage. 1.},
+  file = {/Users/nidhivinod/Zotero/storage/KIPN895X/Finnigan - Turbulence in plant canopies.pdf}
+}
+
+@article{finniganTurbulenceWavingWheat1979,
+  title = {Turbulence in Waving Wheat},
+  author = {Finnigan, J. J.},
+  date = {1979-06-01},
+  journaltitle = {Boundary-Layer Meteorol},
+  volume = {16},
+  number = {2},
+  pages = {181--211},
+  issn = {1573-1472},
+  doi = {10.1007/BF02350511},
+  url = {https://doi.org/10.1007/BF02350511},
+  urldate = {2022-01-18},
+  abstract = {Measurements of mean and fluctuating velocities, surface pressure and stalk waving have been made in a uniform wheat canopy. Features of the vertical profiles of mean turbulence quantities are discussed in the context of the resonant waving of wheat stalks. The discrete and prominent peaks in the velocity spectra measured in and above the canopy are then analyzed in the light of the organized travelling wave-type structure or ‘honami’, observed in such crops on windy days. Prominent peaks in the spectra are identified with the arrival of gusts, the stalk-waving frequency, and the frequency of oscillations in canopy height. Two possible mechanisms are proposed to account for the observed height dependence of the peak frequencies, directly associated with stalk waving.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/CDH4CBHR/Finnigan - 1979 - Turbulence in waving wheat.pdf}
 }
 
 @article{fisherECOSTRESSNASANext2020,
@@ -7044,6 +7081,21 @@
   file = {/Users/nidhivinod/Zotero/storage/UG25H2LV/Meehl and Tebaldi - 2004 - More Intense, More Frequent, and Longer Lasting He.pdf;/Users/nidhivinod/Zotero/storage/3I78TYSF/994.html}
 }
 
+@book{meetingPlantCanopiesTheir1990,
+  title = {Plant {{Canopies}}: {{Their Growth}}, {{Form}} and {{Function}}},
+  shorttitle = {Plant {{Canopies}}},
+  author = {Meeting, Society for Experimental Biology (Great Britain)},
+  date = {1990-10-26},
+  eprint = {qDSEjj91qNkC},
+  eprinttype = {googlebooks},
+  publisher = {{Cambridge University Press}},
+  abstract = {A thorough synthesis of current knowledge about the ways canopies grow, develop, and function. Only recently have advances in simulation modeling in plants begun to emphasize the structural and functional properties of plant canopies in addition to those of the individual constituent leaves. The book considers these properties in terms of the processes--such as transpiration and photosynthesis--by which the canopy and its aerial environment interact. Topics discussed include the meaning of canopy structure, interception of solar radiation, exchange processes, nitrogen nutrition, leaf demography, leaf movement, tillering and branching, and modeling canopy processes from a wide range of plant communities and geographical locations.},
+  isbn = {978-0-521-39563-2},
+  langid = {english},
+  pagetotal = {192},
+  keywords = {Science / Life Sciences / Botany}
+}
+
 @article{meinzerBiophysicalConstraintsLeaf2008,
   title = {Biophysical Constraints on Leaf Expansion in a Tall Conifer},
   author = {Meinzer, Frederick C and Bond, Barbara J and Karanian, Jennifer A},
@@ -9262,6 +9314,19 @@
   abstract = {To study the dispersion of scalar trace constituents such as heat, water vapour or CO2 from extensive sources within vegetation canopies, a Lagrangian approach is essential because of the need to account for the influence of travel time (as a fraction of the Lagrangian time scale) on the dispersion properties of marked fluid particles. A simple, analytic Lagrangian theory is developed for a canopy in which the turbulence is homogeneous. For a given scalar source distribution, predictions are obtained for mean scalar concentration, vertical flux, terms in the balance equation for vertical flux, and vertical diffusivities at first, second and third order. the predictions agree remarkably well with measurements of dispersion from an elevated plane source within a model plant canopy in a wind tunnel. the theory also explains the countergradient heat and CO2 fluxes observed in real forest canopies.},
   langid = {english},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347507}
+}
+
+@incollection{RaupachM.R1989Ttip,
+  title = {Turbulent Transfer in Plant Canopies},
+  booktitle = {Plant Canopies},
+  author = {Raupach, M.R},
+  date = {1989},
+  pages = {41--62},
+  publisher = {{Cambridge University Press}},
+  abstract = {IntroductionThis chapter is about turbulent transfer between a plant community and the atmosphere, especially the transfer of heat, water vapour, CO2 and other scalar entities. We consider the way in which turbulent transfer influences the microclimate within the plant community, in particular the mean scalar concentrations, including temperature and humidity. The second section provides a brief, qualitative overview, to establish the connections between the turbulent transfer process in a plant canopy and exchange processes at both smaller scales, those of individual leaves, and larger scales, those of the entire planetary boundary layer of the atmosphere. Then, with frequent reference to the observed properties of turbulence in plant canopies, the third and fourth sections review two kinds of theory for describing turbulent transfer. The more common Eulerian theories consider the behaviour of the turbulent transfer process at a grid of points fixed in space. Less common, but of increasing importance, are the Lagrangian theories: these describe turbulent transfer by considering the statistical behaviour of the wandering blobs of fluid which actually carry the transferred entity.OverviewCommon experience shows that the air motion within a plant canopy is highly erratic and intermittent. The origin of this behaviour lies in the planetary boundary layer (PBL), the turbulent layer of the atmosphere which extends from the ground to a height of the order of a kilometre (within a factor of three or so).},
+  copyright = {Cambridge University Press 1989},
+  isbn = {978-0-521-39563-2},
+  langid = {english}
 }
 
 @article{readComparativeResponsesTemperature1990,
