--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2255,6 +2255,21 @@
   file = {/Users/nidhivinod/Zotero/storage/K5MPV7YJ/Dang et al. - 1997 - Profiles of photosynthetically active radiation, n.pdf}
 }
 
+@article{darwinIXObservationsStomata1898,
+  title = {{{IX}}. {{Observations}} on Stomata},
+  author = {Darwin, Francis},
+  date = {1898-01-01},
+  journaltitle = {Philosophical Transactions of the Royal Society of London. Series B, Containing Papers of a Biological Character},
+  volume = {190},
+  pages = {531--621},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rstb.1898.0009},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rstb.1898.0009},
+  urldate = {2022-01-18},
+  abstract = {The most obvious method of investigating stomata is to examine them microscopically, and in this way a large number of researches into the conditions which open or close the stoma, and into the mechanism of the movements have been made. The majority of observers have either stripped off the epidermis or have cut surface sections. Neither method can be absolutely depended on as an index of the condition of the stomata in the uninjured leaf. Leitgeb and others have shown that the stomata in the periphery of such preparations are frequently more widely open than those in the centre—a fact which demonstrates the general untrustworthiness of the method. The stomata can only be well seen in stripped epidermis or thin surface sections, but such preparations are especially liable to the source of error above indicated. In spite of the difficulty of accurately observing the stomata in thick sections, and in spite of the general objections to this class of work, there is no doubt that much valuable work has been done in this way. It is, however, significant, as Stahl has pointed out, that Leitgeb (86) and Schellenberger (97) working in this manner have arrived at diametrically opposite results in determining the fundamental question whether or no the majority of terrestrial plants close their stomata at night.},
+  file = {/Users/nidhivinod/Zotero/storage/DQD4Z898/Darwin - 1898 - IX. Observations on stomata.pdf}
+}
+
 @article{daudetWindSpeedLeaf1999,
   title = {Wind Speed and Leaf Boundary Layer Conductance Variation within Tree Crown: {{Consequences}} on Leaf-to-Atmosphere Coupling and Tree Functions},
   shorttitle = {Wind Speed and Leaf Boundary Layer Conductance Variation within Tree Crown},
@@ -7513,6 +7528,24 @@
   file = {/Users/nidhivinod/Zotero/storage/M2FTMCKN/upscaling-transpiration-diverse-forests-insights-tropical-premontane-site.html}
 }
 
+@article{mottStomatalResponsesHumidity1991,
+  title = {Stomatal Responses to Humidity in Air and Helox},
+  author = {Mott, K. A. and Parkhurst, D. F.},
+  date = {1991},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {14},
+  number = {5},
+  pages = {509--515},
+  issn = {1365-3040},
+  doi = {10.1111/j.1365-3040.1991.tb01521.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-3040.1991.tb01521.x},
+  urldate = {2022-01-18},
+  abstract = {Abstract. Stomatal responses to humidity were studied in several species using normal air and a helium: oxygen mixture (79:21 v/v, with CO2 and water vapour added), which we termed ‘helox’. Since water vapour diffuses 2.33 times faster in helox than in air, it was possible to vary the water-vapour concentration difference between the leaf and the air at the leaf surface independently of the transpiration rate and vice versa. The CO2 concentration at the evaporating surfaces (ci), leaf temperature and photon flux density were kept constant throughout the experiments. The results of these experiments were consistent with a mechanism for Stomatal responses to humidity that is based on the rate of water loss from the leaf. Stomata apparently did not directly sense and respond to either the water vapour concentration at the leaf surface or the difference in water vapour concentration between the leaf interior and the leaf surface. In addition, stomatal responses that caused reductions in transpiration rate at low humidities were accompanied by decreases in photosynthesis at constant ci, suggesting heterogeneous (patchy) stomatal closure.},
+  langid = {english},
+  keywords = {helox,humidity,palchiness.,stomata,transpiration},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-3040.1991.tb01521.x}
+}
+
 @article{muir_tealeaves_2019,
   title = {Tealeaves: An {{R}} Package for Modelling Leaf Temperature Using Energy Budgets},
   shorttitle = {Tealeaves},
@@ -9319,7 +9352,7 @@
 @incollection{RaupachM.R1989Ttip,
   title = {Turbulent Transfer in Plant Canopies},
   booktitle = {Plant Canopies},
-  author = {Raupach, M.R},
+  author = {Raupach},
   date = {1989},
   pages = {41--62},
   publisher = {{Cambridge University Press}},
