--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,7 +174,7 @@ Variability in the light environment decreases with height, with the shaded unde
 Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
 The implications of this light gradient are that leaf traits vary along the vertical gradient [Table 1], and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
-Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. Vertical transport at the macroscopic scale of a plant canopy is dominated by turbulent transport rather than by molecular diffusion. Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988]. However, K-theory often fails within canopies, making canopy wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @finniganTurbulencePlantCanopies; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007]. For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987]. Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
+Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. Vertical transport at the macroscopic scale of a plant canopy is dominated by turbulent transport rather than by molecular diffusion. Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988]. However, K-theory often fails within canopies, making canopy wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007]. For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987]. Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
 
 Despite these complexities of within-canopy transport, wind speeds are generally much higher at the top of the canopy than within or beneath [@juckerCanopyStructureTopography2018; @jiao-junWindProfilesTrees2004].
 This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. 
@@ -208,7 +208,7 @@ While $T_{leaf}$ is rarely exactly equal to $T_{air}$, it is most commonly withi
 Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].
 High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). 
 Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and under higher wind speeds (Fig. `r fig_leaf_T`b). 
-Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD, where although $g_b$ increases with wind speed, $g_s$ generally declines as VPD increases due to stomatal closure [Darwin 1898, Mott and Parkhurst 1991].
+Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD, where although $g_b$ increases with wind speed, $g_s$ generally declines as VPD increases due to stomatal closure [@darwinIXObservationsStomata1898; @mottStomatalResponsesHumidity1991].
 Therefore, $T_{leaf}-T_{air}$ decreases in magnitude with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and decreases absolutely with $g_s$ (Fig. `r fig_leaf_T`e).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both humid and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), leaf width (lw), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
