--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3107,6 +3107,23 @@
   file = {/Users/nidhivinod/Zotero/storage/XVJ6RRTP/Feng et al. - 2018 - Comparing shade tolerance measures of woody forest.pdf}
 }
 
+@article{fieldAllocatingLeafNitrogen1983,
+  title = {Allocating Leaf Nitrogen for the Maximization of Carbon Gain: {{Leaf}} Age as a Control on the Allocation Program},
+  shorttitle = {Allocating Leaf Nitrogen for the Maximization of Carbon Gain},
+  author = {Field, C.},
+  date = {1983-02},
+  journaltitle = {Oecologia},
+  volume = {56},
+  number = {2-3},
+  eprint = {28310214},
+  eprinttype = {pmid},
+  pages = {341--347},
+  issn = {1432-1939},
+  doi = {10.1007/BF00379710},
+  abstract = {Simulations using a biochemically-based model of leaf photosynthesis make it possible to predict the distribution of leaf nitrogen contents that maximizes photosynthetic carbon gain over the canopy of an entire plant. In general, the optimal nitrogen content increased with increasing daily photosynthetically active photon irradiance.Leaf aging in natural environments tended to produce leaf nitrogen contents that were similar to the optimal values but somewhat more clustered. Nitrogen redistribution over the duration of a leaf involves costs that are smaller than the benefits in increased photosynthesis. The costs could become larger than the benefits if nitrogen were redistributed on a shorter time scale.},
+  langid = {english}
+}
+
 @article{filellaAltitudinalDifferencesUV1999,
   title = {Altitudinal Differences in {{UV}} Absorbance, {{UV}} Reflectance and Related Morphological Traits of {{Quercus}} Ilex and {{Rhododendron}} Ferrugineum in the {{Mediterranean}} Region},
   author = {Filella, Iolanda and Peñuelas, Josep},
@@ -4369,6 +4386,23 @@
   keywords = {canopy photosynthesis,light distribution,model,nitrogen allocation,nitrogen use,optimization},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.12291},
   file = {/Users/nidhivinod/Zotero/storage/TZPB4N3H/Hikosaka - 2014 - Optimal nitrogen distribution within a leaf canopy.pdf;/Users/nidhivinod/Zotero/storage/G73KJBHL/pce.html}
+}
+
+@article{hiroseMaximizingDailyCanopy1987,
+  title = {Maximizing Daily Canopy Photosynthesis with Respect to the Leaf Nitrogen Allocation Pattern in the Canopy},
+  author = {Hirose, T. and Werger, M. J. A.},
+  date = {1987-07},
+  journaltitle = {Oecologia},
+  volume = {72},
+  number = {4},
+  eprint = {28312513},
+  eprinttype = {pmid},
+  pages = {520--526},
+  issn = {1432-1939},
+  doi = {10.1007/BF00378977},
+  abstract = {A model of daily canopy photosynthesis was constructed taking light and leaf nitrogen distribution in the canopy into consideration. It was applied to a canopy of Solidago altissima. Both irradiance and nitrogen concentration per unit leaf area decreased exponentially with increasing cumulative leaf area from the top of the canopy. The photosynthetic capacity of a single leaf was evaluated in relation to irradiance and nitrogen concentration. By integration, daily canopy photosynthesis was calculated for various canopy architectures and nitrogen allocation patterns. The optimal pattern of nitrogen distribution that maximizes the canopy photosynthesis was determined. Actual distribution of leaf nitrogen in the canopy was more uniform than the optimal one, but it realized over 20\% more photosynthesis than that under uniform distribution and 4.7\% less photosynthesis than that under the optimal distribution. Redeployment of leaf nitrogen to the top of the canopy with ageing should be more effective in increasing total canopy photosynthesis in a stand with a dense canopy than in a stand with an open canopy.},
+  langid = {english},
+  keywords = {Canopy structure,Nitrogen allocation,Optimization,Photosynthesis,Solidago altissima}
 }
 
 @article{houterOntogeneticChangesLeaf2012,
