--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -259,7 +259,7 @@ It has been established that independently of the light environment, traits also
 Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a]. 
 
 \newpage
-**Table `r table_leaf_traits`.** Summary of typically observed variation in leaf traits its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
+**Table `r table_leaf_traits`.** Summary of typically observed variation in leaf traits and its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
 
 ![](table1a.png)
 
@@ -279,8 +279,8 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 ```
 
 Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to higher conductance ($g_b$ or maximal $g_s$) and/or reflectance, which help to lower $T_{leaf}$-$T_{air}$ (Table `r table_leaf_traits`). 
-Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017; @mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (reduces $g_b$).
-Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
+Thus, sun leaves are generally smaller and thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017; @mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (which reduces $g_b$).
+Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
 Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
 At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [reduces $g_b$ or increases boundary layer turbulence, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
 In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
@@ -348,16 +348,16 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 
 ### 4.1. Conductance
 
-Leaf hydraulic, stomatal conductance, and $g_b$ are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
-Due to higher wind, lower RH, and smaller leaf sizes in the canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
-Maximum $g_s$ increases with light--– typically tracking photosynthetic capacity (Wong et al. 1979)-– and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, water supply cannot meet the demands incurred by the high irradiance, VPD and $g_b$ experienced by sun leaves with fully open stomata because of height-related constraints on water transport [ **e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010**] and/or because of ncreased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations. These constraints tend to educe leaf water potential making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
-Stomatal depression duces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
-The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven y increased VPD) than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
+Leaf hydraulic, stomatal and boundary layer conductances are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
+Due to higher wind, lower RH, and smaller leaf sizes in the upper canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
+Maximum $g_s$ increases with light--typically tracking photosynthetic capacity [@wongStomatalConductanceCorrelates1979]--and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
+However, water supply cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves with fully open stomata because, of height-related constraints on water transport [ **e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010**] and/or because of increased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations (Buckley et al. 2014). These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
+Stomatal depression reduces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
+The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven by increased VPD) than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
 
 ### 4.2. Photosynthesis
 
-Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies [Table `r table_leaf_metabolism`, @niinemetsPhotosynthesisResourceDistribution2007 ; @kenzoHeightrelatedChangesLeaf2015 ; @slotPhotosyntheticHeatTolerance2019; @chenLeafEconomicsSpectrum2020].
+Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both predicted by optamization theory [@fieldAllocatingLeafNitrogen1983; @hiroseMaximizingDailyCanopy1987] and observed in numerous field studies [Table `r table_leaf_metabolism`, @niinemetsPhotosynthesisResourceDistribution2007 ; @kenzoHeightrelatedChangesLeaf2015 ; @slotPhotosyntheticHeatTolerance2019; @chenLeafEconomicsSpectrum2020].
 This is primarily driven by the greater light available to sun leaves, which also have traits enabling higher photosynthetic rates under conditions of high light and sufficient water (Tables `r table_leaf_traits`, `r table_leaf_metabolism`). 
 
 Temperature can affect photosynthesis via direct and indirect pathways: directly, by altering photosynthetic enzyme activity and the electron transport chain, and indirectly through increased VPD causing stomatal closure [@lloydEffectsRisingTemperatures2008]. 
