--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -238,7 +238,7 @@ Forests with closed canopies and high LAI, including tropical and temperate broa
 Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do lower-canopy leaves, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
 This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
-The latter can result from a combination of still air in the lower canopy, and the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013]. 
+The latter can result from a combination of still air in the lower canopy, and the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. One  of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the canopy of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. However, the opposite trend was observed for a lone tree surrounded by grass in the same area, with cooler temperatures at the top of the tree crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients. 
 
 ## 3. Leaf traits 
@@ -351,7 +351,7 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 Leaf hydraulic, stomatal and boundary layer conductances are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the upper canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
 Maximum $g_s$ increases with light--typically tracking photosynthetic capacity [@wongStomatalConductanceCorrelates1979]--and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, water supply cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves with fully open stomata because, of height-related constraints on water transport [ **e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010**] and/or because of increased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations (Buckley et al. 2014). These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
+However, water supply cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves with fully open stomata because, of height-related constraints on water transport [e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010] and/or because of increased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations (Buckley et al. 2014). These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
 Stomatal depression reduces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven by increased VPD) than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
 
